--- a/About.html
+++ b/About.html
@@ -11,8 +11,8 @@
 
 <body>
 <ul class='menubar'>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="Timeline.html">Resume</a></li>
+  <li><a href="mycv.html">Home</a></li>
+  <li><a href="Timeline.html">Background</a></li>
   <li><a href="About.html">Skills and Completed Projects</a></li>
   <li><a href="contact.html">Contact</a></li>
   <li><a href="Achievements.html">Achievement</a></li>
