--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 		<link rel="stylesheet" type="text/css" href="style.css"/>
-<title>Personal Resume</title>
+<title>Rahatara Ferdousi Turna</title>
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -113,10 +113,9 @@ function showSlides() {
     }
     slides[slideIndex-1].style.display = "block";
     dots[slideIndex-1].className += " active";
-    setTimeout(showSlides, 4000); 
+    setTimeout(showSlides, 2000); 
 }
 </script>
 
 </body>
 </html>
-
