--- a/About.html
+++ b/About.html
@@ -34,7 +34,7 @@
 </tr>
 <tr>
 <td>.NET Programming Language</td>
-<td> C#.NET 3.5</td>
+<td> C#.NET</td>
 
 </tr>
 <tr>
@@ -45,7 +45,7 @@
 
 <tr>
 <td>Web programming</td>
-<td>PHP,Css,javascript</td>
+<td>PHP,Css,Javascript</td>
 
 </tr>
  <tr>
