--- a/About.html
+++ b/About.html
@@ -29,12 +29,12 @@
 </tr>
 <tr>
 <td> Oriented Programming Language </td>
-<td>Java (J2SE) </td>
+<td>Java </td>
 
 </tr>
 <tr>
 <td>.NET Programming Language</td>
-<td> C#.NET</td>
+<td> C#</td>
 
 </tr>
 <tr>
