--- a/Achievements.html
+++ b/Achievements.html
@@ -19,14 +19,14 @@
 </ul>
  
 <u><h2>Awards: </u></h2>
-<div style="padding:30px;border:solid 3px orange;font-size:20px">
-<ul style="list-style-type:square ;color:white;text-align:left">
-<li>Winner of BWIT mobile apps contest 2015.   </li>
-<li>Participant  of  EATLS Apps Contest 2014 . 
-</li>
-<li>Completed National  Mobile Application Trainer and Innovative Application Development Program of ICT Division.</li>
+<table>
+<tr>
+<td>Winner of BWIT mobile apps contest 2015.   </td>
+<td>Participant  of  EATLS Apps Contest 2014 . </td>
+<td>Completed National  Mobile Application Trainer and Innovative Application Development Program of ICT Division.</td>
+</tr>
+</table>
 
-</ul>
 </div>
 </body>
 </html>
