--- a/Extra.html
+++ b/Extra.html
@@ -18,13 +18,21 @@
   
 </ul>
 
- <u><h2>Extra Curriculum Activities: </u></h2>
-<div style="padding:30px;border:solid 3px orange;font-size:20px">
-<ul style="list-style-type:square ;color:white;text-align:left">
-<li>Writing</li>
-<li>Acting</li>
-<li>Modeling</li>
-<li>Drawing</li>
+ <u><h2 style="text-align:justify">Extra Curriculum Activities: </u></h2>
+ <table style="position:absolute;">
+<tr>
+<td>Writing</td>
+</tr>
+<tr>
+<td> Acting</td>
+</tr>
+<tr>
+<td>Modeling </td>
+</tr>
+<tr>
+<td>Drawing</td>
+</tr>
+</table>
 
 </div>
 <div class="footer-social">
