--- a/Achievements.html
+++ b/Achievements.html
@@ -18,12 +18,19 @@
   
 </ul>
  
-<u><h2>Awards: </u></h2>
-<table>
+
+ <u><h2 style="text-align:justify">Awards: </u></h2>
+ <table style="position:absolute;">
 <tr>
 <td>Winner of BWIT mobile apps contest 2015.   </td>
-<td>Participant  of  EATLS Apps Contest 2014 . </td>
-<td>Completed National  Mobile Application Trainer and Innovative Application Development Program of ICT Division.</td>
+
+</tr>
+<tr>
+<td> <td>Participant  of  EATLS Apps Contest 2014 . </td>
+
+</tr>
+<tr>
+<td><td>Completed National  Mobile Application Trainer and Innovative Application Development Program of ICT Division.</td></td>
 </tr>
 </table>
 
