--- a/Achievements.html
+++ b/Achievements.html
@@ -30,7 +30,7 @@
 
 </tr>
 <tr>
-<td><td>Completed National  Mobile Application Trainer and Innovative Application Development Program of ICT Division.</td></td>
+<td>Completed National  Mobile Application Trainer and Innovative Application Development Program of ICT Division.</td>
 </tr>
 </table>
 
