--- a/Achievements.html
+++ b/Achievements.html
@@ -26,7 +26,7 @@
 
 </tr>
 <tr>
-<td> <td>Participant  of  EATLS Apps Contest 2014 . </td>
+<td>Participant  of  EATLS Apps Contest 2014 . </td>
 
 </tr>
 <tr>
